--- a/1.THE_game/ReadMe
+++ b/1.THE_game/ReadMe
@@ -24,9 +24,9 @@
    
    3)skils
    
-      a)
-      b)
-      c)
-      d)
+      a)last straw
+      b)inferno, storm
+      c)weapon out, steal
+      d)drop, iron boot
    
    
